# windows

ControlHandler/: ControlHandlers.c  ControlHandlers.h
DisplayErrors/: DisplayErrors.c  DisplayErrors.h
FileIO/: FileIO.c  FileIO.h
LinkedList/: LinkedList.c  LinkedList.h
cmake/: .clang-format  Makefile  README.md
cmake/source/: CMakeLists.txt
cmake/source/include/: helpers.h
cmake/source/src/: helpers.c  main.c
echo-server/: .gitignore  REAME.md  echo-server.sln
echo-server/SharedLibraries/: SharedControlHandler.c  SharedLibraries.vcxproj  SharedLibraries.vcxproj.filters
echo-server/client/: client.c  client.vcxproj  client.vcxproj.filters
echo-server/client/x64/Debug/: client.exe.recipe  vc143.idb
echo-server/client/x64/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
echo-server/echo-server/: echo-server.cpp  echo-server.vcxproj  echo-server.vcxproj.filters
echo-server/server/: ClientControlHandler.c  ClientControlHandler.h  ControlHandler.c  ControlHandler.h  server.c  server.vcxproj  server.vcxproj.filters
echo-server/server/x64/Debug/: server.exe.recipe  server.ilk  vc143.idb
echo-server/server/x64/Debug/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+1 more)
scripts/: git-prompt.ps1  ps-profile.ps1  spawn-windows.ps1  username-password-gen.ps1  windows-installs-env-setup.ps1
winbomb/: .gitignore  README.md  main.c  stages.c  stages.h  winbomb.sln  winbomb.vcxproj  winbomb.vcxproj.filters
